nginx/nginx1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx1-deployment
  labels:
    app: nginx-worker1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-worker1
  template:
    metadata:
      labels:
        app: nginx-worker1
    spec:
      containers:
      - name: nginx
        image: 192.100.100.44:5000/myimage:v1
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: my-registry-secret
