nginx/nginx2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2-deployment
  labels:
    app: nginx-worker2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-worker2
  template:
    metadata:
      labels:
        app: nginx-worker2
    spec:
      containers:
      - name: nginx
        image: 192.100.100.44:5000/myimage
        ports:
        - containerPort: 80
